# frontend-test

./: .env.example  .gitignore  LICENSE  README.md  setup.ps1  setup.sh
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: routes_hardware.py  routes_health.py  routes_providers.py  routes_tasks.py
backend/app/core/: paths.py
backend/app/schemas/: __init__.py  models.py
backend/app/services/: compatibility.py  hardware.py  provider_registry.py  provider_runtime.py  provider_seed.py  task_store.py  tasks.py
backend/scripts/: benchmark_latency.py  check_no_secrets.py  provider_dry_run_lifecycle.py  seed_providers.py  validate_providers.py
backend/tests/: test_api_contract.py  test_hardware.py  test_latency.py  test_provider_lifecycle.py  test_provider_registry.py
docs/: backend-api.md  design-system.md  frontend-navigation-theme-latency-2026-05-12.md  provider-ai-virtual-assistant-integration-2026-05-13.md  provider-ambient-healthcare-integration-2026-05-13.md  provider-install-and-hub-latency-2026-05-11.md  provider-nemotron-voice-agent-integration-2026-05-13.md  provider-pdf-to-podcast-2026-05-11.md  provider-plan.md  provider-shop-retail-integration-2026-05-13.md  real-provider-stability-and-log-ui-2026-05-12.md
frontend/: README.md  next.config.ts  package-lock.json  package.json  vitest.config.ts
logs/: provider-install-and-hub-latency-2026-05-11.log.md
plans/: plan-add-ai-virtual-assistant-provider-2026-05-13.md  plan-add-aiq-provider-real-lifecycle-2026-05-12.md  plan-add-ambient-healthcare-agents-providers-2026-05-13.md  (+13 more)
(+217 files in other folders)
