[project]
name = "ai-hub-backend"
version = "0.1.0"
description = "Low-latency FastAPI backend for AI Hub provider runtime."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "psutil>=6.0.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.0",
  "mako>=1.3.12",
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "ruff>=0.8.0",
  "mypy>=1.13.0",
  "pip-audit>=2.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]

[tool.ruff.lint.per-file-ignores]
"app/services/provider_seed.py" = ["E501"]
"scripts/seed_providers.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
plugins = []
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
